feature: fix some warnings